Revision history for MooseX-Role-Parameterized

{{$NEXT}}

1.08      2014-08-23 22:38:12Z
    - add x_breaks metadata for incompatibility issue with MooseX::Storage
      (now resolved with MooseX-Storage-0.47)

1.07      2014-08-06 05:44:11Z
    - re-release to remove README.pod from shipped dist

1.06      2014-08-02 04:34:06Z
    - Restored MooseX::Role::Parameterized->current_metaclass as a public
      method. Apparently there is code on CPAN that relies on this.

1.05      2014-07-31 18:26:03Z
    - If a parameterizable role was reinitialized after any parameters or a
      role block was declared, those declarations were lost. Reinitialization
      usually occurs when new metaroles are applied to the role by other
      MooseX modules.

1.04      2014-07-31 14:53:26Z
    - Convert this distribution to Dist::Zilla to resolve packaging insanity

1.03  2014-07-30
    - This extension is now implemented as a role metarole, which means it can
      (mostly) cooperate with other role extensions, such as
      MooseX::Role::WithOverloading. Note that you should load
      MooseX::Role::Parameterized _after_ other extensions.
    - This module no longer supports passing a "-metaclass" parameter when you
      load it. This was an artifact from a much earlier era of Moose
      extensions.
    - repository migrated to the github moose organization

1.02  2013-09-11
    - set %INC entries in test to avoid failures with
      Moose pre-2.11 (kentfrederic)
        https://github.com/sartak/MooseX-Role-Parameterized/pull/7
        https://rt.cpan.org/Ticket/Display.html?id=88593

1.01  2013-09-10
    - removed use of deprecated Class::MOP::load_class (ether)

1.00  2012-01-12
    - MooseX::Role::Parameterized now depends on Moose 2.0300
      released 2011-09-23 for its several core improvements, hence the
      major version number bump.

    - MXRP now uses the new meta_lookup feature added to Moose 2.0300